--- a/src/Sides/look.css
+++ b/src/Sides/look.css
@@ -96,13 +96,23 @@
 
 .randomrecipe {
     position: fixed;
-    background-color: whitesmoke;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: wheat;
     top: 26.8%;
     width: 100%;
     height: 77.5%;
+    bottom: 0;
     overflow: auto;
-    align-items: center;
-    justify-content: center;
+}
+
+.randombutton {
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.2);
+    border: 0;
+    margin-top: 50px;
+    margin-left: 55px;
+    margin-right: 25px;
 }
 
 .main {
