--- a/src/Sides/look.css
+++ b/src/Sides/look.css
@@ -1,3 +1,5 @@
+/* Popup css */
+
 .popuppicture {
     position: fixed;
     top: 0;
@@ -75,6 +77,12 @@
     left: 0;
 }
 
+/* Main css */
+
+.main {
+    position: flex;
+}
+
 .picupload {
     position: fixed;
     top: 6.8%;
@@ -86,14 +94,6 @@
     align-items: center;
 }
 
-.search {
-    position: absolute;
-    width: 100%;
-    height: 6.8%;
-    background-color: orangered;
-    line-height: 0px;
-}
-
 .randomrecipe {
     position: fixed;
     display: grid;
@@ -101,8 +101,6 @@
     background-color: wheat;
     top: 26.8%;
     width: 100%;
-    height: 77.5%;
-    bottom: 0;
     overflow: auto;
 }
 
@@ -115,8 +113,20 @@
     margin-right: 25px;
 }
 
-.main {
-    position: flex;
+.randombutton:hover {
+    background-color: lightskyblue;
+}
+
+
+/* searchbar css */
+
+.search {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 6.8%;
+    background-color: orangered;
+    line-height: 0px;
 }
 
 .results {
@@ -141,4 +151,30 @@
 
 .searchbar {
     width: 300px;
+}
+
+
+/* Recipelist css */
+
+.recipelistback {
+    position: flex;
+}
+
+.backposition {
+    position: fixed;
+    top: 6.8%;
+    height: 3.2%;
+    width: 100%;
+    background-color: orangered;
+    align-items: baseline;
+}
+
+.recipelist {
+    position: fixed;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: wheat;
+    top: 10%;
+    width: 100%;
+    overflow: auto;
 }
