--- a/src/Sides/look.css
+++ b/src/Sides/look.css
@@ -149,6 +149,10 @@
     display: flex;
 }
 
+.results .buttonresult:hover {
+    background-color: aqua;
+}
+
 .searchbar {
     width: 300px;
 }
@@ -166,7 +170,6 @@
     height: 3.2%;
     width: 100%;
     background-color: orangered;
-    align-items: baseline;
 }
 
 .recipelist {
@@ -174,7 +177,6 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     background-color: wheat;
-    top: 10%;
     width: 100%;
     overflow: auto;
 }
