--- a/src/Sides/look.css
+++ b/src/Sides/look.css
@@ -58,7 +58,7 @@
     left: 25%;
     right: 25%;
     bottom: 25%;
-    background-color: white;
+    background-color: #E1E5F8;
 }
 
 .submitbutton {
@@ -67,21 +67,25 @@
     left: 25%;
     right: 25%;
     bottom: 22%;
+    background-color: #24a0ed;
 }
 
 .backbutton {
     position: absolute;
     top: 0;
     left: 0;
+    width: 10%;
+    height: 5%;
+    background-color: #24a0ed;
 }
 
 .picupload {
     position: fixed;
     top: 6.8%;
-    height: 20%;
+    height: 10%;
     width: 100%;
     display: flex;
-    background-color: orange;
+    background-color: #BBC4EB;
     justify-content: center;
     align-items: center;
 }
@@ -90,13 +94,13 @@
     position: absolute;
     width: 100%;
     height: 6.8%;
-    background-color: orangered;
+    background-color: #84A4FC;
     line-height: 0px;
 }
 
 .randomrecipe {
     position: fixed;
-    background-color: whitesmoke;
+    background-color: #E1E5F8;
     top: 26.8%;
     width: 100%;
     height: 77.5%;
@@ -112,7 +116,7 @@
 .results {
     width: 300px;
     height: 200px;
-    background-color: whitesmoke;
+    background-color: #E1E5F8;
     overflow: hidden;
     overflow-y: auto;
     position: absolute;
@@ -131,4 +135,5 @@
 
 .searchbar {
     width: 300px;
+    /* height: 30px; */
 }
