--- a/src/Sides/look.css
+++ b/src/Sides/look.css
@@ -1,3 +1,5 @@
+/* Popup css */
+
 .popuppicture {
     position: fixed;
     top: 0;
@@ -17,7 +19,7 @@
     left: 25%;
     right: 25%;
     bottom: 25%;
-    background-color: white;
+    background-color: #E1E5F8;
 }
 
 .popupbuttons .subbutton {
@@ -36,6 +38,7 @@
 .popupbuttons .picture {
     position: absolute;
     left: 37%;
+    background-color: #E1E5F8;
 }
 
 .popupchoose {
@@ -79,6 +82,16 @@
     background-color: #24a0ed;
 }
 
+.deletebutton {
+    background-color: red;
+}
+
+/* Main css */
+
+.main {
+    position: flex;
+}
+
 .picupload {
     position: fixed;
     top: 6.8%;
@@ -90,28 +103,67 @@
     align-items: center;
 }
 
+.basictext {
+    position: fixed;
+    top: 7%;
+    left: 25%;
+    display: flex;
+    justify-content: center;
+}
+
+.picinput {
+    position: fixed;
+    top: 13%;
+    left: 40%;
+    display: flex;
+    /* has to be fixed */
+}
+
+.uploadbutton {
+    position: fixed;
+    top: 13%;
+    left: 55%;
+    display: flex;
+    justify-content: center;
+}
+
+.randomrecipe {
+    position: fixed;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: #E1E5F8;
+    top: 16.8%;
+    width: 100%;
+    /* height: 77.5%; */
+    overflow: auto;
+    align-items: center;
+    justify-content: center;
+}
+
+.randombutton {
+    background-color: whitesmoke;
+    box-shadow: rgba(0, 0, 0, 0.2);
+    border: 0;
+    margin-top: 50px;
+    margin-left: 55px;
+    margin-right: 25px;
+}
+
+.randombutton:hover {
+    background-color: lightskyblue;
+}
+
+/* searchbar css */
+
 .search {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 6.8%;
     background-color: #84A4FC;
     line-height: 0px;
 }
 
-.randomrecipe {
-    position: fixed;
-    background-color: #E1E5F8;
-    top: 26.8%;
-    width: 100%;
-    height: 77.5%;
-    overflow: auto;
-    align-items: center;
-    justify-content: center;
-}
-
-.main {
-    position: flex;
-}
 
 .results {
     width: 300px;
@@ -133,7 +185,53 @@
     display: flex;
 }
 
+.results .buttonresult:hover {
+    background-color: aqua;
+}
+
 .searchbar {
     width: 300px;
     /* height: 30px; */
+}
+
+/* Recipelist css */
+
+.recipelistback {
+    position: flex;
+}
+
+.backposition {
+    position: absolute;
+    top: 6.8%;
+    height: 3.2%;
+    width: 100%;
+    background-color: #84A4FC;
+}
+
+.recipelist {
+    position: absolute;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    background-color: #E1E5F8;
+    width: 100%;
+    overflow: auto;
+}
+
+.recipeinfo {
+    overflow: auto;
+    top: 6,8%;
+    position: fixed;
+}
+
+/* font */
+
+@font-face {
+    font-family: "Pacifigo";
+    src: local("Pacifigo"), url(../fonts/Pacifico-Regular.ttf) format("truetype");
+}
+
+.title {
+    font-family: "Pacifigo";
+    font-weight: black;
+    font-size: xx-large;
 }
